# openbb-mcp-smithery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  smithery.yaml
mcp_server/openbb_mcp_server/: main.py
mcp_server/openbb_mcp_server/utils/: session_config.py
openbb_platform/: smithery_install.py
openbb_platform/extensions/auth_pat/: .gitignore  pyproject.toml
openbb_platform/extensions/auth_pat/openbb_auth_pat/: __init__.py  auth_extension.py  pat_utils.py  request_context.py  session_manager.py
openbb_platform/extensions/auth_pat/tests/: __init__.py  test_pat_utils.py  test_session_manager.py
openbb_platform/extensions/mcp_server/: README.md  pyproject.toml
openbb_platform/extensions/mcp_server/openbb_mcp_server/app/: app.py
openbb_platform/extensions/mcp_server/openbb_mcp_server/middleware/: __init__.py  forward_auth.py  smithery.py
openbb_platform/extensions/mcp_server/openbb_mcp_server/models/: mcp_config.py  settings.py
openbb_platform/extensions/mcp_server/openbb_mcp_server/security/: context.py  httpx_auth.py
openbb_platform/extensions/mcp_server/openbb_mcp_server/service/: mcp_service.py
openbb_platform/extensions/mcp_server/openbb_mcp_server/utils/: app_import.py  fastapi.py
openbb_platform/extensions/mcp_server/tests/models/: test_mcp_config.py
src/smithery_router/: __init__.py  auth_overlay.py  config_schema.py  router.py  session.py
